bastion.yaml
apiVersion: v1
kind: Pod
metadata:
  name: core-k8s
  namespace: default
spec:
  containers:
    - name: bastion
      image: docker.io/busybox:latest
      command: ['sleep', '10000']
