nginx_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  containers:
    - image: docker.io/nginx:latest
      imagePullPolicy: Always
      name: nginx
      resources:
        limits:
          cpu: "1"
          memory: "400Mi"
        requests:
          cpu: "1"
          memory: "400Mi"
