pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: core-k8s-v2
  labels:
    role: just-an-example-v2
    app: my-example-app-v2
    organization: friends-of-manning
    creator: Artem
spec:
  containers:
  - name: any-old-name-will-do-v2
    image: docker.io/busybox:latest
    command: ['sleep', '10000']
    resources:
      limits:
        cpu: 0.1
      requests:
        cpu: 0.1
    ports:
    - name: webapp-port
      containerPort: 80
      protocol: TCP
