pod_with_secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-secret-docker
  namespace: antnik
spec:
  containers:
    - name: pod-with-secret
      image: alpine:latest
  imagePullSecrets:
    - name: my-registry-secret
