svc_for_python_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    service: example-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
