ingress_dlya_servera.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - host: my-service.local
      http:
        paths:
        - path: /
          pathType: Prefix # Важно указать тип пути, например Prefix или Exact
          backend:
            service:
              name: my-service
              port:
                number: 8080
